Upgrading from Java 17 to 21